feat(api): dynamic the status in the get my properties